Configuration values updated.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -40,22 +40,23 @@ gov.pay.url=${GOV_PAY_URL:#{https://publicapi.payments.service.gov.uk/v1/payment
 gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 
 # S2S trusted services
+
 # Required for the ServiceAuthorisationApi class in service-auth-provider-java-client library
-trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
 idam.s2s-auth.microservice=ccpay_bubble
-idam.s2s-auth.url=${IDAM_S2S_URL:http://rpe-service-auth-provider-aat.service.core-compute-aat.internal}
-idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
-idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
+idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,divorce
+idam.api.url=https://idam-api.aat.platform.hmcts.net
 logging.level.org.springframework.security=DEBUG
-spring.security.oauth2.client.provider.oidc.issuer-uri = ${IDAM_API_URL}/o
-spring.security.oauth2.client.registration.oidc.client-id = internal
-spring.security.oauth2.client.registration.oidc.client-secret = internal
-oidc.issuer = ${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
+trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp
+spring.security.oauth2.client.provider.oidc.issuer-uri=https://idam-web-public.aat.platform.hmcts.net/o
+spring.security.oauth2.client.registration.oidc.client-id=paybubble
+spring.security.oauth2.client.registration.oidc.client-secret=***REMOVED***
+oidc.audience-list=paybubble,cmc_citizen
+oidc.issuer=https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/hmcts
+idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL}
 
-
-auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
-auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
+auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL}
+auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL}
 
 card.payments.report.startDate=${CARD_PAYMENTS_REPORT_START_DATE:#{null}}
 card.payments.report.endDate=${CARD_PAYMENTS_REPORT_END_DATE:#{null}}
@@ -95,13 +96,6 @@ card.payments.report.endDate=${CARD_PAYMENTS_REPORT_END_DATE:#{null}}
 #pba.divorce.payments.email.to=${PBA_DIVORCE_PAYMENTS_EMAIL_TO:tester@gmail.com}
 #pba.divorce.payments.email.subject=${PBA_DIVORCE_PAYMENTS_EMAIL_SUBJECT:subject}
 #pba.divorce.payments.email.message=${PBA_DIVORCE_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
-
-#pba.fpl.payments.report.scheduler.enabled = ${PBA_FPL_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
-#pba.fpl.payments.email.from=${PBA_FPL_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
-#pba.fpl.payments.email.to=${PBA_FPL_PAYMENTS_EMAIL_TO:dummy@gmail.com}
-#pba.fpl.payments.email.subject=${PBA_FPL_PAYMENTS_EMAIL_SUBJECT:subject}
-#pba.fpl.payments.email.message=${PBA_FPL_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
-
 
 #spring.mail.host=${SPRING_MAIL_HOST:mta.reform.hmcts.net}
 #spring.mail.port=${SPRING_MAIL_PORT:25}
