Configuration values updated.

--- a/api/src/functionalTest/resources/application-functional-tests.properties
+++ b/api/src/functionalTest/resources/application-functional-tests.properties
@@ -24,6 +24,15 @@ mock.callback.url.endpoint=${TEST_URL:http://payment-api-aat-staging.service.cor
 
 # Added as part of OpenIdConnect
 
-s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
-s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
-s2s-auth.microservice=ccpay_bubble
+idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
+idam.s2s-auth.microservice=ccpay_bubble
+idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,divorce
+logging.level.org.springframework.security=DEBUG
+trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp
+spring.security.oauth2.client.provider.oidc.issuer-uri=https://idam-web-public.aat.platform.hmcts.net/o
+spring.security.oauth2.client.registration.oidc.client-id=paybubble
+spring.security.oauth2.client.registration.oidc.client-secret=NVYEC2X7XFSRENTU
+oidc.audience-list=paybubble,cmc_citizen
+oidc.issuer=https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/hmcts
+idam.s2s-auth.url=http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
+
