--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -82,11 +82,15 @@ callback.payments.cutoff.time.in.minutes=0
 
 # Added as part of OpenIdConnect
 
-s2s-authorised.services=ccpay_bubble, cmc, bulk_scan_payment_processor, api_gw, probate_frontend, divorce_frontend, ccd_gw
-s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
-s2s-auth.microservice=ccpay_bubble
-idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
+idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
+idam.s2s-auth.microservice=ccpay_bubble
+idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,divorce
+idam.api.url=https://idam-api.aat.platform.hmcts.net
+logging.level.org.springframework.security=DEBUG
 spring.security.oauth2.client.provider.oidc.issuer-uri=https://idam-web-public.aat.platform.hmcts.net/o
-oidc.audience-list=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
-oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
-azure.application-insights.instrumentation-key=0000-0000-0000-0000
+spring.security.oauth2.client.registration.oidc.client-id=paybubble
+spring.security.oauth2.client.registration.oidc.client-secret=NVYEC2X7XFSRENTU
+oidc.audience-list=paybubble,cmc_citizen
+oidc.issuer=https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/hmcts
+idam.s2s-auth.url=http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
+
