--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -53,10 +53,10 @@ spring.security.oauth2.client.registration.oidc.client-id=paybubble
 spring.security.oauth2.client.registration.oidc.client-secret=***REMOVED***
 oidc.audience-list=paybubble,cmc_citizen
 oidc.issuer=https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/hmcts
-idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL}
+idam.s2s-auth.url=http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
 
-auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL}
-auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL}
+auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
+auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 
 card.payments.report.startDate=${CARD_PAYMENTS_REPORT_START_DATE:#{null}}
 card.payments.report.endDate=${CARD_PAYMENTS_REPORT_END_DATE:#{null}}
