--- a/api/build.gradle
+++ b/api/build.gradle
@@ -66,13 +66,17 @@ dependencies {
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.1.2.RELEASE'
-  compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version:'1.0.4.RELEASE'
+  //compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version:'1.0.4.RELEASE'
+
+    compile(group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.0.4.RELEASE') {
+        exclude(module: 'spring-plugin-core')
+    }
   compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.9'
   compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version:'5.0'
   compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.11'
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
   compile group: 'io.springfox', name: 'springfox-swagger-ui', version:'2.9.2'
-  compile group: 'io.springfox', name: 'springfox-swagger2', version:'2.9.0'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
   compile group: 'uk.gov.hmcts.reform', name: 'liquibase-core', version:'3.8.1'
   compile group: 'com.microsoft.azure', name: 'azure-servicebus-spring-boot-starter', version: '2.1.6'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
