--- a/api/build.gradle
+++ b/api/build.gradle
@@ -58,7 +58,6 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'logging', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: javaLoggingVersion
-  compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
   compile group: 'uk.gov.hmcts.reform', name: 'http-proxy-spring-boot-autoconfigure', version:'1.1.0'
     compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
@@ -66,11 +65,7 @@ dependencies {
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.1.2.RELEASE'
-  //compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version:'1.0.4.RELEASE'
 
-    compile(group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.0.4.RELEASE') {
-        exclude(module: 'spring-plugin-core')
-    }
   compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.9'
   compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version:'5.0'
   compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.11'
@@ -83,29 +78,24 @@ dependencies {
   compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
 
     // Start of OpenId Connect. Few versions has been explicitly added as 5.2.2 due to lower spring boot version in payment-app.
+
     compile group: 'io.jsonwebtoken', name: 'jjwt', version:'0.9.1'
     compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.1'
     compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.3.1'
     compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
     implementation "io.github.openfeign:feign-httpclient:10.7.0"
-
     compile "org.springframework.security:spring-security-web"
     compile "org.springframework.security:spring-security-config"
     compile "org.springframework.boot:spring-boot-starter-oauth2-client"
     compile "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
-    compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
     compile group: 'io.github.openfeign', name: 'feign-core', version: '10.7.0'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE'
-
-
+    //Added this for spring boot upgrade as swagger was not working with the latest version.
+    compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
+    compile(group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.0.4.RELEASE') {
+        exclude(module: 'spring-plugin-core')
+    }
     // End of OpenId Connect.
-
-
-
-
-
-    // End of OpenId Connect.
-
 
     compile group: 'org.ff4j', name: 'ff4j-spring-boot-web-api', version: '1.7.1'
     compile group: 'org.ff4j', name: 'ff4j-web', version: '1.7.1'
