--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -13,8 +13,8 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 gov.pay.auth.key.probate_frontend=fillThisOut
 gov.pay.url=https://publicapi.payments.service.gov.uk/v1/payments
 
-auth.idam.client.baseUrl=http://localhost:8001
-auth.provider.service.client.baseUrl=http://localhost:8002
+auth.idam.client.baseUrl=http://localhost:5000
+auth.provider.service.client.baseUrl=http://localhost:8489
 
 trusted.s2s.service.names=cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 
@@ -98,3 +98,4 @@ s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,cc
 s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
 s2s-auth.microservice=ccpay_bubble
 server.port=8000
+idam.s2s-auth.url=http://localhost:8489
