OIDC vault changes.

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -99,3 +99,5 @@ s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
 s2s-auth.microservice=ccpay_bubble
 server.port=8000
 idam.s2s-auth.url=http://localhost:8489
+idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
+idam.s2s-auth.microservice=ccpay_bubble
