--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -15,9 +15,6 @@ gov.pay.auth.key.cmc=cmc-gov-pay-key
 gov.pay.auth.key.divorce=divorce-gov-pay-key
 gov.pay.operational_services=ccd
 
-# S2S trusted services
-trusted.s2s.service.names=cmc,probate_frontend,divorce,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
-
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
 
@@ -82,15 +79,14 @@ callback.payments.cutoff.time.in.minutes=0
 
 # Added as part of OpenIdConnect
 
-idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
-idam.s2s-auth.microservice=ccpay_bubble
-idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,divorce
-idam.api.url=https://idam-api.aat.platform.hmcts.net
+idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
+idam.s2s-auth.url=http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
 logging.level.org.springframework.security=DEBUG
+trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 spring.security.oauth2.client.provider.oidc.issuer-uri=https://idam-web-public.aat.platform.hmcts.net/o
 spring.security.oauth2.client.registration.oidc.client-id=paybubble
-spring.security.oauth2.client.registration.oidc.client-secret=NVYEC2X7XFSRENTU
-oidc.audience-list=paybubble,cmc_citizen
-oidc.issuer=https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/hmcts
-idam.s2s-auth.url=http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
+spring.security.oauth2.client.registration.oidc.client-secret=${OIDC_CLIENT_SECRET}
+oidc.audience-list=paybubble
+oidc.issuer=${OIDC_ISSUER:https://forgerock-am.service.core-compute-idam-aat.internal:8443/openam/oauth2/hmcts}
 
