--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -42,18 +42,19 @@ gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 # S2S trusted services
 
 # Required for the ServiceAuthorisationApi class in service-auth-provider-java-client library
-idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
-idam.s2s-auth.microservice=ccpay_bubble
-idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,divorce
-idam.api.url=https://idam-api.aat.platform.hmcts.net
+idam.s2s-auth.totp_secret=${OIDC_S2S_SECRET}
+idam.s2s-auth.microservice=${OIDC_S2S_MICROSERVICE_NAME}
+idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
+idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL}
 logging.level.org.springframework.security=DEBUG
-trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp
-spring.security.oauth2.client.provider.oidc.issuer-uri=https://idam-web-public.aat.platform.hmcts.net/o
-spring.security.oauth2.client.registration.oidc.client-id=paybubble
-spring.security.oauth2.client.registration.oidc.client-secret=***REMOVED***
-oidc.audience-list=paybubble,cmc_citizen
-oidc.issuer=https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/hmcts
-idam.s2s-auth.url=http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
+trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+spring.security.oauth2.client.provider.oidc.issuer-uri=${ISSUER_URI}
+spring.security.oauth2.client.registration.oidc.client-id=${OIDC_CLIENT_ID}
+spring.security.oauth2.client.registration.oidc.client-secret=${OIDC_CLIENT_SECRET}
+oidc.audience-list=${OIDC_AUDIENCE_LIST}
+oidc.issuer=${OIDC_ISSUER}
+
 
 auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
