--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -11,6 +11,9 @@ java:
 
     SPRING_LIQUIBASE_ENABLED: true
     SPRING_CLOUD_PROPERTIESVOLUME_ENABLED: false
+    OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/hmcts
+    OIDC_CLIENT_SECRET: ***REMOVED***
+    OIDC_S2S_SECRET: G5XTFNBUW4P6ZP4F
 
     SPRING_PROFILES_ACTIVE: "liberataMock,callbackMock,ccdMock"
     CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 0
