--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -54,43 +54,43 @@ card.payments.report.endDate=${CARD_PAYMENTS_REPORT_END_DATE:#{null}}
 #card.payments.email.from=${CARD_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
 #card.payments.email.to=${CARD_PAYMENTS_EMAIL_TO:tester@gmail.com}
 #card.payments.email.subject=${CARD_PAYMENTS_EMAIL_SUBJECT:subject}
-#card.payments.email.message=${CARD_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's reconciliation report. <br/><br/>Regards <br/><br/>Payments team<br/><br/>}
+#card.payments.email.message=${CARD_PAYMENTS_EMAIL_MESSAGE:Hi, <br/><br/>Please find attached Payment by Account reconciliation report. <br/><br/>Regards, <br/>Fees & Payments Team <br/><br/>}
 
 #bar.payments.report.scheduler.enabled = ${BAR_PAYMENTS_REPORT_SCHEDULER_ENABLED:false}
 #bar.payments.email.from=${BAR_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
 #bar.payments.email.to=${BAR_PAYMENTS_EMAIL_TO:tester@gmail.com}
 #bar.payments.email.subject=${BAR_PAYMENTS_EMAIL_SUBJECT:subject}
-#bar.payments.email.message=${BAR_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's reconciliation report. <br/><br/>Regards <br/><br/>Payments team<br/><br/>}
+#bar.payments.email.message=${BAR_PAYMENTS_EMAIL_MESSAGE:Hi, <br/><br/>Please find attached Payment by Account reconciliation report. <br/><br/>Regards, <br/>Fees & Payments Team <br/><br/>}
 
 #pba.cmc.payments.report.scheduler.enabled = ${PBA_CMC_PAYMENTS_REPORT_SCHEDULER_ENABLED:false}
 #pba.cmc.payments.email.from=${PBA_CMC_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
 #pba.cmc.payments.email.to=${PBA_CMC_PAYMENTS_EMAIL_TO:tester@gmail.com}
 #pba.cmc.payments.email.subject=${PBA_CMC_PAYMENTS_EMAIL_SUBJECT:subject}
-#pba.cmc.payments.email.message=${PBA_CMC_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
+#pba.cmc.payments.email.message=${PBA_CMC_PAYMENTS_EMAIL_MESSAGE:Hi, <br/><br/>Please find attached Payment by Account reconciliation report. <br/><br/>Regards, <br/>Fees & Payments Team <br/><br/>}
 
 #pba.probate.payments.report.scheduler.enabled = ${PBA_PROBATE_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
 #pba.probate.payments.email.from=${PBA_PROBATE_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
 #pba.probate.payments.email.to=${PBA_PROBATE_PAYMENTS_EMAIL_TO:dummy@HMCTS.net}
 #pba.probate.payments.email.subject=${PBA_PROBATE_PAYMENTS_EMAIL_SUBJECT:subject}
-#pba.probate.payments.email.message=${PBA_PROBATE_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
+#pba.probate.payments.email.message=${PBA_PROBATE_PAYMENTS_EMAIL_MESSAGE:Hi, <br/><br/>Please find attached Payment by Account reconciliation report. <br/><br/>Regards, <br/>Fees & Payments Team <br/><br/>}
 
 #pba.finrem.payments.report.scheduler.enabled = ${PBA_FINREM_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
 #pba.finrem.payments.email.from=${PBA_FINREM_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
 #pba.finrem.payments.email.to=${PBA_FINREM_PAYMENTS_EMAIL_TO:dummy@HMCTS.net}
 #pba.finrem.payments.email.subject=${PBA_FINREM_PAYMENTS_EMAIL_SUBJECT:subject}
-#pba.finrem.payments.email.message=${PBA_FINREM_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
+#pba.finrem.payments.email.message=${PBA_FINREM_PAYMENTS_EMAIL_MESSAGE:Hi, <br/><br/>Please find attached Payment by Account reconciliation report. <br/><br/>Regards, <br/>Fees & Payments Team <br/><br/>}
 
 #pba.divorce.payments.report.scheduler.enabled = ${PBA_DIVORCE_PAYMENTS_REPORT_SCHEDULER_ENABLED:false}
 #pba.divorce.payments.email.from=${PBA_DIVORCE_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
 #pba.divorce.payments.email.to=${PBA_DIVORCE_PAYMENTS_EMAIL_TO:tester@gmail.com}
 #pba.divorce.payments.email.subject=${PBA_DIVORCE_PAYMENTS_EMAIL_SUBJECT:subject}
-#pba.divorce.payments.email.message=${PBA_DIVORCE_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
+#pba.divorce.payments.email.message=${PBA_DIVORCE_PAYMENTS_EMAIL_MESSAGE:Hi, <br/><br/>Please find attached Payment by Account reconciliation report. <br/><br/>Regards, <br/>Fees & Payments Team <br/><br/>}
 
 #pba.fpl.payments.report.scheduler.enabled = ${PBA_FPL_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
 #pba.fpl.payments.email.from=${PBA_FPL_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
 #pba.fpl.payments.email.to=${PBA_FPL_PAYMENTS_EMAIL_TO:dummy@gmail.com}
 #pba.fpl.payments.email.subject=${PBA_FPL_PAYMENTS_EMAIL_SUBJECT:subject}
-#pba.fpl.payments.email.message=${PBA_FPL_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
+#pba.fpl.payments.email.message=${PBA_FPL_PAYMENTS_EMAIL_MESSAGE:Hi, <br/><br/>Please find attached Payment by Account reconciliation report. <br/><br/>Regards, <br/>Fees & Payments Team <br/><br/>}
 
 
 #spring.mail.host=${SPRING_MAIL_HOST:mta.reform.hmcts.net}
