--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -16,6 +16,11 @@ java:
 
     REFORM_SERVICE_NAME: payment-api
     REFORM_TEAM: cc
+    ISSUER_URI: "https://idam-web-public.{{ .Values.global.environment }}.platform.hmcts.net/o"
+    OIDC_CLIENT_ID: "paybubble"
+    OIDC_ISSUER: "https://forgerock-am.service.core-compute-idam-{{ .Values.global.environment }}.internal:8443/openam/oauth2/hmcts"
+    OIDC_S2S_MICROSERVICE_NAME: ccpay_bubble
+    OIDC_AUDIENCE_LIST: paybubble,cmc_citizen
 
     AUTH_PROVIDER_SERVICE_CLIENT_BASEURL: http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     AUTH_IDAM_CLIENT_BASEURL: https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net
