Idam Api URL modified.

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -91,9 +91,9 @@ spring.security.oauth2.client.provider.oidc.issuer-uri=${IDAM_API_URL:http://loc
 # Dummy OIDC client required even we are not going to use
 spring.security.oauth2.client.registration.oidc.client-id=internal
 spring.security.oauth2.client.registration.oidc.client-secret=internal
-oidc.audience-list=internal,paybubble,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+oidc.audience-list=paybubble,cmc_citizen
 oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
-idam.api.url=${IDAM_API_URL:http://localhost:5000}
+idam.api.url=${AUTH_IDAM_CLIENT_BASEURL:http://localhost:5000}
 s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
 s2s-auth.microservice=ccpay_bubble
