--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -45,7 +45,7 @@ gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 idam.s2s-auth.totp_secret=${OIDC_S2S_SECRET}
 idam.s2s-auth.microservice=${OIDC_S2S_MICROSERVICE_NAME}
 idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
-idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
+idam.api.url=${AUTH_IDAM_CLIENT_BASEURL}
 idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL}
 logging.level.org.springframework.security=DEBUG
 trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
