Update generic secret

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -64,19 +64,19 @@ card.payments.report.endDate=${CARD_PAYMENTS_REPORT_END_DATE:#{null}}
 
 #pba.cmc.payments.report.scheduler.enabled = ${PBA_CMC_PAYMENTS_REPORT_SCHEDULER_ENABLED:false}
 #pba.cmc.payments.email.from=${PBA_CMC_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
-#pba.cmc.payments.email.to=${PBA_CMC_PAYMENTS_EMAIL_TO:tester@gmail.com}
+#pba.cmc.payments.email.to=${PBA_PAYMENTS_EMAIL_TO:tester@gmail.com}
 #pba.cmc.payments.email.subject=${PBA_CMC_PAYMENTS_EMAIL_SUBJECT:subject}
 #pba.cmc.payments.email.message=${PBA_CMC_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
 
 #pba.probate.payments.report.scheduler.enabled = ${PBA_PROBATE_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
 #pba.probate.payments.email.from=${PBA_PROBATE_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
-#pba.probate.payments.email.to=${PBA_PROBATE_PAYMENTS_EMAIL_TO:dummy@HMCTS.net}
+#pba.probate.payments.email.to=${PBA_PAYMENTS_EMAIL_TO:dummy@HMCTS.net}
 #pba.probate.payments.email.subject=${PBA_PROBATE_PAYMENTS_EMAIL_SUBJECT:subject}
 #pba.probate.payments.email.message=${PBA_PROBATE_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
 
 #pba.finrem.payments.report.scheduler.enabled = ${PBA_FINREM_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
 #pba.finrem.payments.email.from=${PBA_FINREM_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
-#pba.finrem.payments.email.to=${PBA_FINREM_PAYMENTS_EMAIL_TO:dummy@HMCTS.net}
+#pba.finrem.payments.email.to=${PBA_PAYMENTS_EMAIL_TO:dummy@HMCTS.net}
 #pba.finrem.payments.email.subject=${PBA_FINREM_PAYMENTS_EMAIL_SUBJECT:subject}
 #pba.finrem.payments.email.message=${PBA_FINREM_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
 
