PAY-2736: AKS migration & pba reporting

--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -36,11 +36,11 @@ java:
     CARD_PAYMENTS_REPORT_SCHEDULER_ENABLED: "true"
     CARD_PAYMENTS_EMAIL_FROM: "no-reply@reform.hmcts.net"
     CARD_PAYMENTS_EMAIL_MESSAGE: "Hi, <br/><br/>Please find attached Payment by Account reconciliation report. <br/><br/>Regards, <br/>Fees & Payments Team <br/><br/>"
-    CARD_PAYMENTS_EMAIL_SUBJECT: "CNP:PBA Card Payments Reconciliation Report"
+    CARD_PAYMENTS_EMAIL_SUBJECT: "CNP:Card Payments Reconciliation Report"
     BAR_PAYMENTS_REPORT_SCHEDULER_ENABLED: "true"
     BAR_PAYMENTS_EMAIL_FROM: "no-reply@reform.hmcts.net"
     BAR_PAYMENTS_EMAIL_MESSAGE: "Hi, <br/><br/>Please find attached Payment by Account reconciliation report. <br/><br/>Regards, <br/>Fees & Payments Team <br/><br/>"
-    BAR_PAYMENTS_EMAIL_SUBJECT: "CNP:PBA BAR Reconciliation Report"
+    BAR_PAYMENTS_EMAIL_SUBJECT: "CNP:BAR Reconciliation Report"
     PBA_CMC_PAYMENTS_REPORT_SCHEDULER_ENABLED: "true"
     PBA_CMC_PAYMENTS_EMAIL_FROM: "no-reply@reform.hmcts.net"
     PBA_CMC_PAYMENTS_EMAIL_MESSAGE: "Hi, <br/><br/>Please find attached Payment by Account reconciliation report. <br/><br/>Regards, <br/>Fees & Payments Team <br/><br/>"
