--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -27,6 +27,8 @@ java:
     FEES_REGISTER_URL: http://fees-register-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     PAYBUBBLE_HOME_URL: https://ccpay-bubble-frontend-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     CORE_CASE_DATA_API_URL: http://ccd-data-store-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
+    
+    CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 2
 
     GOV_PAY_URL: "https://publicapi.payments.service.gov.uk/v1/payments"
     GOV_PAY_OPERATIONAL_SERVICES: "ccd_gw"
