PAY-3217: Updated the chart version as well

--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -27,11 +27,11 @@ java:
     FEES_REGISTER_URL: http://fees-register-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     PAYBUBBLE_HOME_URL: https://ccpay-bubble-frontend-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     CORE_CASE_DATA_API_URL: http://ccd-data-store-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
-    
+
     CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 2
 
     GOV_PAY_URL: "https://publicapi.payments.service.gov.uk/v1/payments"
-    GOV_PAY_OPERATIONAL_SERVICES: "ccd_gw"
+    GOV_PAY_OPERATIONAL_SERVICES: "ccd_gw,api_gw"
     PCI_PAL_CALLBACK_URL: https://core-api-mgmt-{{ .Values.global.environment }}.azure-api.net/telephony-api/telephony/callback
 
     TRUSTED_S2S_SERVICE_NAMES: "cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service"
