--- a/api/src/main/resources/bootstrap.yaml
+++ b/api/src/main/resources/bootstrap.yaml
@@ -29,3 +29,5 @@ spring:
         pba-finrem-payments-email-to: pba.finrem.payments.email.to
         pba-divorce-payments-email-to: pba.divorce.payments.email.to
         pba-fpl-payments-email-to: pba.fpl.payments.email.to
+        paybubble-s2s-secret: OIDC_S2S_SECRET
+        paybubble-idam-client-secret: OIDC_CLIENT_SECRET
