IAC onboarding changes

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -48,7 +48,7 @@ idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_fronte
 idam.api.url=${AUTH_IDAM_CLIENT_BASEURL}
 idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL}
 logging.level.org.springframework.security=DEBUG
-trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
 spring.security.oauth2.client.provider.oidc.issuer-uri=${ISSUER_URI}
 spring.security.oauth2.client.registration.oidc.client-id=${OIDC_CLIENT_ID}
 spring.security.oauth2.client.registration.oidc.client-secret=${OIDC_CLIENT_SECRET}
