--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -83,7 +83,7 @@ idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_fronte
 idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
 idam.s2s-auth.url=http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
 logging.level.org.springframework.security=DEBUG
-trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
 spring.security.oauth2.client.provider.oidc.issuer-uri=https://idam-web-public.aat.platform.hmcts.net/o
 spring.security.oauth2.client.registration.oidc.client-id=paybubble
 spring.security.oauth2.client.registration.oidc.client-secret=${OIDC_CLIENT_SECRET}
