IAC onboarding changes

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -44,7 +44,7 @@ gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 # Required for the ServiceAuthorisationApi class in service-auth-provider-java-client library
 idam.s2s-auth.totp_secret=${OIDC_S2S_SECRET}
 idam.s2s-auth.microservice=${OIDC_S2S_MICROSERVICE_NAME}
-idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
 idam.api.url=${AUTH_IDAM_CLIENT_BASEURL}
 idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL}
 logging.level.org.springframework.security=DEBUG
