--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -79,7 +79,7 @@ callback.payments.cutoff.time.in.minutes=0
 
 # Added as part of OpenIdConnect
 
-idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
 idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
 idam.s2s-auth.url=http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
 logging.level.org.springframework.security=DEBUG
