--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -94,7 +94,7 @@ spring.security.oauth2.client.registration.oidc.client-secret=internal
 oidc.audience-list=paybubble,cmc_citizen
 oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 idam.api.url=${AUTH_IDAM_CLIENT_BASEURL:http://localhost:5000}
-s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
 s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
 s2s-auth.microservice=ccpay_bubble
 server.port=8000
