Launch Darkly apportion feature flag code changes added.

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -12,8 +12,8 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 gov.pay.auth.key.probate_frontend=fillThisOut
 gov.pay.url=https://publicapi.payments.service.gov.uk/v1/payments
 
-auth.idam.client.baseUrl=http://localhost:8001
-auth.provider.service.client.baseUrl=http://localhost:8002
+auth.idam.client.baseUrl=http://localhost:23443
+auth.provider.service.client.baseUrl=http://localhost:23443
 
 trusted.s2s.service.names=cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
 
@@ -84,3 +84,8 @@ azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
 
 payments.account.existing.account.number=PBA0082848
 payments.account.fake.account.number=QWERTYUIOP
+
+launchDarkly.sdkKey: ${LAUNCH_DARKLY_SDK_KEY:sdk-ebe718c8-5fcc-44d7-889d-5338af2d1f3c}
+launchDarkly.connectionTimeout: 3
+launchDarkly.socketTimeout: 3
+launchDarkly.flushInterval: 10
