--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -85,7 +85,7 @@ azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
 payments.account.existing.account.number=PBA0082848
 payments.account.fake.account.number=QWERTYUIOP
 
-launchDarkly.sdkKey: ${LAUNCH_DARKLY_SDK_KEY:sdk-ebe718c8-5fcc-44d7-889d-5338af2d1f3c}
-launchDarkly.connectionTimeout: 3
-launchDarkly.socketTimeout: 3
-launchDarkly.flushInterval: 10
+launchDarkly.sdkKey=${LAUNCH_DARKLY_SDK_KEY:sdk-ebe718c8-5fcc-44d7-889d-5338af2d1f3c}
+launchDarkly.connectionTimeout=3
+launchDarkly.socketTimeout=3
+launchDarkly.flushInterval=10
