--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'org.owasp.dependencycheck' version '5.2.4'
     id "com.gorylenko.gradle-git-properties" version "1.4.21"
-    id 'findbugs'
+    //id 'findbugs'
     id 'jacoco'
 }
 
@@ -55,7 +55,7 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: "jacoco"
-    apply plugin: "findbugs"
+    //apply plugin: "findbugs"
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
@@ -69,6 +69,8 @@ subprojects {
 
     dependencies {
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
+        compile group:'org.dom4j',name:'dom4j',version: '2.1.3'
+        compile group:'org.dom4j',name:'dom4j',version: '2.1.3'
         compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
         compile group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
         compile group:'org.apache.poi', name: 'poi-ooxml', version: '4.1.0'
@@ -76,7 +78,7 @@ subprojects {
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-        compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
+        //compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.6.4') {
             sourceSets {
@@ -106,14 +108,14 @@ subprojects {
         }
     }
 
-    findbugs {
+    /*findbugs {
         ignoreFailures = false
         reportsDir = file("$project.buildDir/reports/findbugs")
         effort = "max"
         reportLevel = "high"
         includeFilter = file("$rootProject.projectDir/findbugs-security-include.xml")
         excludeFilter = file("$rootProject.projectDir/findbugs-security-exclude.xml")
-    }
+    }*/
 }
 
 dependencies {
