--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,11 @@ subprojects {
         compile group:'org.apache.poi', name: 'poi-ooxml', version: '4.1.0'
         compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
         testCompile group: 'junit', name: 'junit', version: '4.12'
+
         testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
+        //to fix CWE-476 upgrade the version to 3.11.1
+        //testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
+
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         //compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
