Added the key back.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -128,7 +128,7 @@ feature.bulk.scan.payments.check=true
 feature.bulk.scan.payments.check.pay.bubble=true
 
 duplicate.payment.check.interval.in.minutes = 2
-
+azure.application-insights.instrumentation-key=${APPINSIGHTS_INSTRUMENTATIONKEY:dummy}
 azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
 azure.servicebus.topic-name=serviceCallbackTopic
 azure.servicebus.subscription-name=defaultServiceCallbackSubscription
