CVE FixesPAY-3162 : added FF4j feature flag and customize application.prop for trusted services

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -41,8 +41,7 @@ gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 
 # S2S trusted services
 
-trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
-
+trusted.s2s.service.names=${TRUSTED_S2S_SERVICE_NAMES}
 
 auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
@@ -114,6 +113,7 @@ feature.check.liberata.account.for.all.services=false
 feature.duplicate.payment.check=true
 feature.case.reference.validation=true
 feature.bulk.scan.payments.check=true
+feature.iac.pba.service.onboarding.check=false
 feature.bulk.scan.payments.check.pay.bubble=true
 
 duplicate.payment.check.interval.in.minutes = 2
