--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -78,6 +78,7 @@ feature.payments.service.callback=false
 feature.payments.cancel=true
 feature.case.reference.validation=false
 feature.bulk.scan.payments.check=true
+feature.iac.pba.service.onboarding.check=false
 feature.bulk.scan.payments.check.pay.bubble=true
 azure.application-insights.instrumentation-key=${APPINSIGHTS_INSTRUMENTATIONKEY:dummy}
 azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
