Apportion live date moved to properties file.

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -89,3 +89,4 @@ launchDarkly.sdkKey=${LAUNCH_DARKLY_SDK_KEY:sdk-ebe718c8-5fcc-44d7-889d-5338af2d
 launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
+apportion.live.date=01.06.2020
