Fee Amount Due Calculation & Telephony ReApportion

--- a/api/src/main/resources/db/changelog/db.changelog-0.1.4.yaml
+++ b/api/src/main/resources/db/changelog/db.changelog-0.1.4.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 1554989041418-13
+      id: 1554989041418-10
       author: ayan
       changes:
         - createTable:
@@ -56,78 +56,7 @@ databaseChangeLog:
                   name: date_created
                   type: TIMESTAMP WITHOUT TIME ZONE
   - changeSet:
-      id: 1554989041418-7
-      author: ayan
-      changes:
-        - createTable:
-            tableName: fee_pay_staged
-            columns:
-              - column:
-                  name: id
-                  type: INT
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: ccd_case_no
-                  type: varchar(255)
-              - column:
-                  name: group_reference
-                  type: varchar(255)
-              - column:
-                  name: fee_id
-                  type: INT
-              - column:
-                  name: fee_code
-                  type: varchar(255)
-              - column:
-                  name: fee_amount
-                  type: numeric(19, 2)
-              - column:
-                  name: volume
-                  type: INT
-              - column:
-                  name: calculated_amount
-                  type: numeric(19, 2)
-              - column:
-                  name: hwf_amount
-                  type: numeric(19, 2)
-              - column:
-                  name: net_amount
-                  type: numeric(19, 2)
-              - column:
-                  name: fee_created_date
-                  type: TIMESTAMP(3) WITHOUT TIME ZONE
-              - column:
-                  name: payment_id
-                  type: INT
-              - column:
-                  name: payment_amount
-                  type: numeric(19, 2)
-              - column:
-                  name: payment_ref
-                  type: varchar(255)
-              - column:
-                  name: payment_status
-                  type: varchar(255)
-              - column:
-                  name: payment_created_date
-                  type: TIMESTAMP WITHOUT TIME ZONE
-              - column:
-                  name: payment_channel
-                  type: varchar(255)
-              - column:
-                  name: payment_method
-                  type: varchar(255)
-              - column:
-                  name: payment_provider
-                  type: varchar(255)
-              - column:
-                  name: service_type
-                  type: varchar(255)
-  - changeSet:
-      id: 1554989041418-8
+      id: 1554989041418-11
       author: ayan
       failOnError: true
       changes:
@@ -136,13 +65,14 @@ databaseChangeLog:
             sql: >
               ALTER TABLE fee ADD COLUMN apportion_amount numeric(19, 2);
               ALTER TABLE fee ADD COLUMN allocated_amount numeric(19, 2);
+              ALTER TABLE fee ADD COLUMN amount_due numeric(19, 2);
               ALTER TABLE fee ADD COLUMN is_fully_apportioned varchar(10);
               ALTER TABLE fee ADD COLUMN date_apportioned TIMESTAMP WITHOUT TIME ZONE;
               ALTER TABLE fee ADD COLUMN date_created TIMESTAMP(3) WITHOUT TIME ZONE;
               ALTER TABLE fee ADD COLUMN date_updated TIMESTAMP(3) WITHOUT TIME ZONE;
 
   - changeSet:
-      id: 1554989041418-9
+      id: 1554989041418-12
       author: ayan
       changes:
         - createTable:
@@ -168,7 +98,7 @@ databaseChangeLog:
                   ('remission_applied', 'Valid remission received and applied to fee successfully'),
                   ('payment_apportioned', 'Valid payment received and fee apportioned successfully');
   - changeSet:
-      id: 1554989041418-12
+      id: 1554989041418-13
       author: ayan
       changes:
         - createTable:
