PAY-3433 - Enablement of Hikari properties

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.username=${POSTGRES_USERNAME:payment}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver=org.postgresql.Driver
 
+#HikariCP Settings
+spring.datasource.hikari.leak-detection-threshold=60000
+logging.level.com.zaxxer.hikari=debug
+
 spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED:true}
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.main.allow-bean-definition-overriding=true
