Apportionment - PAY-3446 Launch Darkly configuration changes.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -131,7 +131,7 @@ fees.register.url=${FEES_REGISTER_URL:https://fees-register-api.platform.hmcts.n
 
 callback.payments.cutoff.time.in.minutes=${CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES:0}
 
-launchDarkly.sdkKey=${LAUNCH_DARKLY_SDK_KEY:sdk-ebe718c8-5fcc-44d7-889d-5338af2d1f3c}
+launch.darkly.sdk.key=${LAUNCH_DARKLY_SDK_KEY:dummy}
 launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
