--- a/api/src/main/resources/bootstrap.yaml
+++ b/api/src/main/resources/bootstrap.yaml
@@ -29,3 +29,4 @@ spring:
         pba-finrem-payments-email-to: pba.finrem.payments.email.to
         pba-divorce-payments-email-to: pba.divorce.payments.email.to
         pba-fpl-payments-email-to: pba.fpl.payments.email.to
+        launch-darkly-sdk-key: launch.darkly.sdk.key
